<resources>
    <string name="app_name">Cookit</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="forgetPassword">忘記密碼</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>
    <string name="loginIndex">會員登入</string>
    <string name="changeLanguage">切換語言</string>
    <string name="changePassword">更改密碼</string>
    <string name="myFridge">我的冰箱</string>
    <string name="myMenu">我的菜單</string>
    <string name="menuLog">瀏覽紀錄</string>
    <string name="userInfo">會員基本資料</string>
    <string name="userIndex">會員專區</string>
    <string name="logout">登出</string>
    <string name="nav_member">會員</string>
    <string name="nav_edit">修改</string>
    <string name="nav_main">首頁</string>
    <string name="nav_favorite">收藏</string>
    <string name="nav_upload">上傳</string>
    <string name="currentNickname">當前暱稱: </string>
    <string name="newNickname">新暱稱: </string>
    <string name="newNicknameHint">請輸入新暱稱 </string>
    <string name="sendOut">送出</string>
    <string name="myLog">我的紀錄</string>
    <string name="news">最新動態</string>
    <string name="pops">熱門排行</string>
    <string name="myFav">我的收藏</string>
    <string name="myUpload">食譜上傳</string>
    <string name="category">食譜類別: </string>
    <string name="recipeName">食譜名稱: </string>
    <string name="recipeNameHint">番茄蛋炒飯</string>
    <string name="intro">食譜簡介: </string>
    <string name="introHint">分享特色、重點 </string>
    <string name="ingredient">所需食材: </string>
    <string name="ingredientHint">EX:番茄:50g,雞蛋60g </string>
    <string name="step1">步驟一: </string>
    <string name="step1Hint"></string>
    <string name="step2">步驟二: </string>
    <string name="step3">步驟三: </string>
    <string name="step4">步驟四: </string>
    <string name="step5">步驟五: </string>
    <string name="step6">步驟六: </string>
    <string name="step7">步驟七: </string>
    <string name="step8">步驟八: </string>
    <string name="step9">步驟九: </string>
    <string name="step10">步驟十: </string>
    <string name="picture">圖片</string>
    <string name="Cover">上傳封面照片</string>
    <string name="uploadCover">上傳封面</string>
    <string name="upload">上傳</string>
    <string name="messageBoard">我的留言</string>
    <string name="changePwdIndex">更改密碼</string>
    <string name="emailInput">信箱: </string>
    <string name="EnterEmail">請輸入信箱</string>
    <string name="EmailHint">註:我們將寄送更改網址連結至您的信箱</string>
    <string name="forgetPwdIndex">忘記密碼</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="customizeMenu">客製化菜單</string>
    <string name="FridgeIndex">我的冰箱</string>
    <string name="clearFridge">清空冰箱</string>
    <string name="leftOverInput">剩餘食材</string>
    <string name="leftOver">食材</string>
    <string name="leftOverHint"> 目前暫無食材</string>
    <string name="recommendRecipe">推薦食譜</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string-array name="type">
        <item>葷食</item>
        <item>素食</item>
    </string-array>
    <string-array name="time">
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>