<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/loginIndex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/loginIndex"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textVisiblePassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />
        //登入按鈕

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pwd"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="20sp" />

        //註冊and忘記密碼按鈕

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Login_Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Reg_forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forgetPassword"
                android:textSize="20sp" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_changeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:layout_marginTop="300dp"
            android:text="@string/changeLanguage"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>