<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ForgetPwdActivity">
    <TextView
        android:id="@+id/ForgetPwdIndex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:background="@color/title"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/forgetPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailInput"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/ResetPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/EnterEmail"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/EmailHint"
        android:textSize="16sp"
        android:textColor="#ADADAD"/>
    //送出按鈕
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgetPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:text="@string/sendOut" />
        </LinearLayout>



</LinearLayout>