<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MenuActivity">
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/customMenuRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CustomizeBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/breakfast"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CustomizeLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:layout_margin="15dp"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CustomizeDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/dinner"
            android:textSize="20sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_toCustomizeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customizeMenu"
        android:background="@color/ButtonTransparent"
        android:textColor="@color/ButtonUrl"
        android:textSize="20sp"
        android:layout_marginLeft="270dp"/>


</LinearLayout>